# tauri2-react-template

./: .gitignore  Makefile  README.md  README_EN.md  package-lock.json  package.json
.github/workflows/: release.yml
apps/desktop/: index.html  package.json  tailwind.config.js  vite.config.ts
apps/desktop/src/: App.tsx
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/migrations/: 20250101000000_init.sql
apps/desktop/src-tauri/src/: error.rs  main.rs
apps/desktop/src-tauri/src/application/: config_commands.rs  config_queries.rs  mod.rs  user_commands.rs  user_queries.rs
apps/desktop/src-tauri/src/domain/: config.rs  cqrs.rs  events.rs  mod.rs  users.rs
apps/desktop/src-tauri/src/infra/: db.rs  event_publisher.rs  http.rs  logging.rs  mod.rs  repo_config.rs  repo_users.rs
apps/desktop/src-tauri/src/interface/: commands.rs  mod.rs  tray.rs
apps/desktop/src/components/: LanguageSwitcher.tsx
apps/desktop/src/components/ui/: avatar.tsx  (+18 more)
apps/desktop/src/hooks/: useAppConfig.ts  useEvent.ts  useTheme.tsx  useUsers.ts
apps/desktop/src/i18n/: index.ts
apps/desktop/src/lib/: events.ts  logger.ts  query-client.ts
apps/desktop/src/pages/: ComponentShowcasePage.tsx  HomePage.tsx  SettingsPage.tsx  UsersPage.tsx
apps/desktop/src/styles/: globals.css
docs/: ICON_RESOURCES.md  README.md  changelog.md  code_of_conduct.md  contributing.md  getting_started.md  template_checklist.md
docs/architecture/: architecture_overview.md
docs/en/: README.md  development.md
docs/zh/: development.md
(+10 files in other folders)
